logs/dag_id=dag_with_postgress_hooks_v01/run_id=manual__2023-04-10T15:27:29.683328+00:00/task_id=postgres_to_s3/attempt=3.log
[2023-04-10T15:39:06.517+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgress_hooks_v01.postgres_to_s3 manual__2023-04-10T15:27:29.683328+00:00 [queued]>
[2023-04-10T15:39:06.528+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgress_hooks_v01.postgres_to_s3 manual__2023-04-10T15:27:29.683328+00:00 [queued]>
[2023-04-10T15:39:06.528+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-04-10T15:39:06.528+0000] {taskinstance.py:1289} INFO - Starting attempt 3 of 7
[2023-04-10T15:39:06.528+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-04-10T15:39:06.550+0000] {taskinstance.py:1309} INFO - Executing <Task(PythonOperator): postgres_to_s3> on 2023-04-10 15:27:29.683328+00:00
[2023-04-10T15:39:06.553+0000] {standard_task_runner.py:55} INFO - Started process 1635 to run task
[2023-04-10T15:39:06.555+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgress_hooks_v01', 'postgres_to_s3', 'manual__2023-04-10T15:27:29.683328+00:00', '--job-id', '7079', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgress_hooks.py', '--cfg-path', '/tmp/tmpa__qt0jv']
[2023-04-10T15:39:06.556+0000] {standard_task_runner.py:83} INFO - Job 7079: Subtask postgres_to_s3
[2023-04-10T15:39:06.617+0000] {task_command.py:389} INFO - Running <TaskInstance: dag_with_postgress_hooks_v01.postgres_to_s3 manual__2023-04-10T15:27:29.683328+00:00 [running]> on host d034b084d02f
[2023-04-10T15:39:06.711+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=dejan
AIRFLOW_CTX_DAG_ID=dag_with_postgress_hooks_v01
AIRFLOW_CTX_TASK_ID=postgres_to_s3
AIRFLOW_CTX_EXECUTION_DATE=2023-04-10T15:27:29.683328+00:00
AIRFLOW_CTX_TRY_NUMBER=3
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-10T15:27:29.683328+00:00
[2023-04-10T15:39:06.714+0000] {logging_mixin.py:137} WARNING - /home/***/.local/lib/python3.7/site-packages/***/utils/context.py:205 AirflowContextDeprecationWarning: Accessing 'next_ds_nodash' from the template is deprecated and will be removed in a future version. Please use '{{ data_interval_end | ds_nodash }}' instead.
[2023-04-10T15:39:06.722+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-04-10T15:39:06.724+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 192, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dag_with_postgress_hooks.py", line 21, in postgres_to_s3
    cursor.execute("select * from orders where date >= %s and date < %s", )
psycopg2.errors.SyntaxError: syntax error at or near "%"
LINE 1: select * from orders where date >= %s and date < %s
                                           ^

[2023-04-10T15:39:06.732+0000] {taskinstance.py:1332} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgress_hooks_v01, task_id=postgres_to_s3, execution_date=20230410T152729, start_date=20230410T153906, end_date=20230410T153906
[2023-04-10T15:39:06.746+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 7079 for task postgres_to_s3 (syntax error at or near "%"
LINE 1: select * from orders where date >= %s and date < %s
                                           ^
; 1635)
[2023-04-10T15:39:06.772+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-10T15:39:06.795+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
